estructuras, ajustes de codigo y demas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
-    <!--boots-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -19,10 +18,10 @@
 
 <body>
     <header>
-        <nav class="navbar p-3 navbar-expand-lg">
+        <nav class="navbar p-3 navbar-expand-lg ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo" class="d-inline-block align-text-top">
+                    <img class="logoMenu" src="./imagenes/Logo.png" alt="Logo" class="d-inline-block align-text-top">
                     <h1 class="text-light">NFTasty</h1>
                 </a>
                 <button class="navbar-toggler btnNav" type="button" data-bs-toggle="offcanvas"
@@ -40,16 +39,17 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
                             <li class="nav-item">
-                                <a class="nav-link active text-light" aria-current="page" href="/index.html">Inicio</a>
+                                <a class="nav-link  text-light aInicio" aria-current="page"
+                                    href="/index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./pages/mediosdepago.html">Medios de pago</a>
+                                <a class="nav-link active text-light " href="./pages/mediosdepago.html">Medios de pago</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./pages/categorias.html">Categorias</a>
+                                <a class="nav-link text-light " href="./pages/categorias.html">Categorias</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./pages/vender.html">Vender</a>
+                                <a class="nav-link text-light " href="./pages/vender.html">Vender</a>
                             </li>
                         </ul>
                     </div>
@@ -90,7 +90,7 @@
         </section>
         <section class="imgIndex1">
             <div class="card grid-1">
-                <img src="./imagenes/1.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/1.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -101,18 +101,18 @@
                 </div>
             </div>
             <div class="card grid-2">
-                <img src="./imagenes/22436.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/22436.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
                     <p>Creador: John Smith
-                        Preventa: 12/8/2022
+                        Preventa: 12/7/2022
                         Precio: 30 BNB</p>
                     <a class="botonNft" href="#">Ver más</a>
                 </div>
             </div>
             <div class="card grid-3">
-                <img src="./imagenes/3.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/3.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="card grid-4">
-                <img src="./imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -136,7 +136,7 @@
         </section>
         <section class="imgIndex2">
             <div class="card grid-5">
-                <img src="./imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="card grid-6">
-                <img src="./imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/NFT-technikart-770x514.jpg.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="card grid-7">
-                <img src="./imagenes/images.png.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/images.png.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="card grid-8">
-                <img src="./imagenes/ixqzqi2iddz71.webp.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/ixqzqi2iddz71.webp.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -186,7 +186,7 @@
             <li><a href="./pages/contactanos.html">Contactanos</a></li>
             <li><a href="#">Sobre nosotros</a></li>
             <li><a href="#">Mision y vision</a></li>
-            <li><a href="#">Asesorias</a></li>
+            <li><a href="#">Disclairmer</a></li>
             <li><a href="../index.html">Inicio</a></li>
         </ul>
         <div class="copy">
