--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
-    <!--boots-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -34,7 +33,8 @@
                     <div class="offcanvas-header">
                         <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo"
                             class="d-inline-block align-text-top">
-                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
@@ -46,7 +46,7 @@
                                 <a class="nav-link text-light" href="./mediosdepago.html">Medios de pago</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./categorias.html">Categorias</a>
+                                <a class="nav-link text-light aCategorias" href="./categorias.html">Categorias</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="./vender.html">Vender</a>
@@ -58,27 +58,28 @@
         </nav>
     </header>
     <main class="mainCategorias">
-        <div class="titulo">
-            <h2>Categorias</h2>
-        </div>
         <section>
-            <ul class="listaCategoria">
-                <li><a href="#apenft">ApeNFT</a></li>
-                <li><a href="#cyberpunk">Cyberpunk</a></li>
-                <li><a href="#dummynft">DummyNFT</a></li>
-                <li><a href="#sharksbsc">Sharks BSC</a></li>
-                <li><a href="#angels">Angels</a></li>
-                <li><a href="#skullhead">Skull head</a></li>
-                <li><a href="#zombie">Zombie</a></li>
-                <li><a href="#boredape">Bored Ape</a></li>
-                <li><a href="#CriptoFox">CriptoFox</a></li>
-            </ul>
-
+            <div class="titulo">
+                <h2>Categorias</h2>
+            </div>
+            <div>
+                <ul class="listaCategoria">
+                    <li><a href="#apenft">ApeNFT</a></li>
+                    <li><a href="#cyberpunk">Cyberpunk</a></li>
+                    <li><a href="#dummynft">DummyNFT</a></li>
+                    <li><a href="#sharksbsc">Sharks BSC</a></li>
+                    <li><a href="#angels">Angels</a></li>
+                    <li><a href="#skullhead">Skull head</a></li>
+                    <li><a href="#zombie">Zombie</a></li>
+                    <li><a href="#boredape">Bored Ape</a></li>
+                    <li><a href="#CriptoFox">CriptoFox</a></li>
+                </ul>
+            </div>
         </section>
         <div class="allCategorias">
             <section class="categorias">
                 <div class="card">
-                    <img src="../imagenes/1.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/1.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -89,7 +90,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/22436.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/22436.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -100,7 +101,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/3.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/3.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -111,7 +112,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -126,7 +127,7 @@
             <h2 class="categoriaNft" id="apenft">ApeNFT</h2>
             <section class="categorias">
                 <div class="card">
-                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -137,7 +138,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/th5gr7jlhkz71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/th5gr7jlhkz71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -148,7 +149,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="">
+                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -159,7 +160,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" width="300px" alt="">
+                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -174,7 +175,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/1.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/1.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -185,7 +186,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/22436.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/22436.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -196,7 +197,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/3.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/3.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -207,7 +208,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -222,7 +223,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -233,7 +234,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/th5gr7jlhkz71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/th5gr7jlhkz71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -244,7 +245,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="">
+                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -255,7 +256,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" width="300px" alt="">
+                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -270,7 +271,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/1.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/1.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -281,7 +282,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/22436.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/22436.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -292,7 +293,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/3.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/3.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -303,7 +304,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -318,7 +319,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -329,7 +330,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/th5gr7jlhkz71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/th5gr7jlhkz71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -340,7 +341,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="">
+                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -351,7 +352,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" width="300px" alt="">
+                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -366,7 +367,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/1.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/1.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -377,7 +378,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/22436.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/22436.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -388,7 +389,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/3.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/3.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -399,7 +400,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -414,7 +415,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/z2sd8x4gs4z71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -425,7 +426,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/th5gr7jlhkz71.webp.png" width="300px" alt="">
+                    <img src="../imagenes/th5gr7jlhkz71.webp.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -436,7 +437,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="">
+                    <img src="../imagenes/NFT-technikart-770x514.jpg.png" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -447,7 +448,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" width="300px" alt="">
+                    <img src="../imagenes/nft-marche-effondre-adoption-continue.jpg" alt="">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -462,7 +463,7 @@
             <section class="categorias" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
 
                 <div class="card">
-                    <img src="../imagenes/1.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/1.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -473,7 +474,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/22436.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/22436.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -484,7 +485,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/3.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/3.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -495,7 +496,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                    <img src="../imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" alt="NFT ape">
                     <h3>Nombre NFT</h3>
                     <div class="contenido">
 
@@ -513,7 +514,7 @@
             <li><a href="contactanos.html">Contactanos</a></li>
             <li><a href="#">Sobre nosotros</a></li>
             <li><a href="#">Mision y vision</a></li>
-            <li><a href="#">Asesorias</a></li>
+            <li><a href="#">Disclairmer</a></li>
             <li><a href="../index.html">Inicio</a></li>
         </ul>
         <div class="copy">
