--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
     <link rel="icon" href="../imagenes/Logo.png">
-    <!--boots-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -33,7 +32,8 @@
                     <div class="offcanvas-header">
                         <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo"
                             class="d-inline-block align-text-top">
-                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
@@ -59,20 +59,25 @@
     <main class="mainContactanos">
         <section class="formContactanos">
             <form class="form" action="" method="post">
-                <div><input type="text" placeholder="  Nombre..." required class="name"></div>
-                <!---->
-                <div> <input type="email" placeholder="  Correo electronico..." required class="mail"></div>
-                <!---->
-                <div> <textarea name="" id="" cols="30" rows="10"
-                        placeholder="Escribe aqui tu consulta, duda o lo que desees..." class="coment"></textarea></div>
-                <!---->
+                <div>
+                    <input type="text" placeholder="  Nombre..." required class="name">
+                </div>
+                <div>
+                    <input type="email" placeholder="  Correo electronico..." required class="mail">
+                </div>
+                <div>
+                    <textarea name="" id="" cols="30" rows="10"
+                        placeholder="Escribe aqui tu consulta, duda o lo que desees..." class="coment">
+                    </textarea>
+                </div>
                 <div class="terminos">
                     <p><input type="checkbox" name="" id="" required>Acepto los <a class="TyC"
-                            href="https://google.com/" target="_blank">Terminos y Condiciones</a></p>
+                            href="https://google.com/" target="_blank">Terminos y Condiciones</a>
+                    </p>
                 </div>
-                <!---->
-                <div><button class="boton" type="submit">Enviar</button></div>
-
+                <div>
+                    <button class="boton" type="submit">Enviar</button>
+                </div>
             </form>
         </section>
         <section class="descripcionp">
@@ -83,16 +88,18 @@
         </section>
         <section class="iconSocials">
             <div class="socials">
-                <a href="https://google.com/" target="_blank"><img class="fbIcon" src="../imagenes/fb.png"
-                        alt="Facebook"></a>
-                <a href="https://google.com/" target="_blank"><img class="wpIcon" src="../imagenes/whats.png"
-                        alt="Whatsapp"></a>
-                <a href="https://google.com/" target="_blank"><img class="instaIcon"
-                        src="../imagenes/Instagram_icon.png" alt="Instagram"></a>
+                <a href="https://google.com/" target="_blank">
+                    <img class="fbIcon" src="../imagenes/fb.png" alt="Facebook">
+                </a>
+                <a href="https://google.com/" target="_blank">
+                    <img class="wpIcon" src="../imagenes/whats.png" alt="Whatsapp">
+                </a>
+                <a href="https://google.com/" target="_blank">
+                    <img class="instaIcon" src="../imagenes/Instagram_icon.png" alt="Instagram">
+                </a>
             </div>
         </section>
     </main>
-
     <footer class="pie">
         <ul class="listaFooter">
             <li><a href="#">Contactanos</a></li>
