--- a/pages/mediosdepago.html
+++ b/pages/mediosdepago.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
-    <!--boots-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -34,7 +33,8 @@
                     <div class="offcanvas-header">
                         <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo"
                             class="d-inline-block align-text-top">
-                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
@@ -43,7 +43,7 @@
                                     href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./mediosdepago.html">Medios de pago</a>
+                                <a class="nav-link text-light aMedios" href="./mediosdepago.html">Medios de pago</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="./categorias.html">Categorias</a>
@@ -65,22 +65,24 @@
         <section class="mediosDePago">
             <div class="bitcoinPaypal" data-aos="zoom-out-right" data-aos-easing="linear" data-aos-duration="600">
                 <div class="moneda">
-                    <a href="#vidTuto"><img src="../imagenes/196543.png" alt="Bitcoin">
-                        <P>Puedes cargar Bitcoin a tu cuenta desde una direccion personalizada, click aqui.</p>
+                    <a href="#vidTuto">
+                        <img src="../imagenes/196543.png" alt="Bitcoin">
+                        <P class="pMoneda">Puedes cargar Bitcoin a tu cuenta desde una direccion personalizada, click aqui.</p>
                     </a>
                 </div>
-                <div class="moneda" data-aos="zoom-out-right" data-aos-easing="linear" data-aos-duration="600"><img
-                        src="../imagenes/Paypal_2014_logo.png" alt="Paypal">
-                    <P>Puedes pagar atravez de tu cuenta Paypal.</p>
+                <div class="moneda" data-aos="zoom-out-right" data-aos-easing="linear" data-aos-duration="600">
+                    <img src="../imagenes/Paypal_2014_logo.png" alt="Paypal">
+                    <P class="pMoneda">Puedes pagar atravez de tu cuenta Paypal.</p>
                 </div>
             </div>
             <div class="cashCredit" data-aos="zoom-out-left" data-aos-easing="linear" data-aos-duration="600">
-                <div class="moneda Cash"><img src="../imagenes/currency.png" alt="Cash">
-                    <P>Puedes reservar tu compra y pagar despues en efectivo en cualquier punto de tu pais.</p>
+                <div class="moneda Cash">
+                    <img src="../imagenes/currency.png" alt="Cash">
+                    <P class="pMoneda">Puedes reservar tu compra y pagar despues en efectivo en cualquier punto de tu pais.</p>
                 </div>
                 <div class="moneda credit" data-aos="zoom-out-left" data-aos-easing="linear" data-aos-duration="600">
                     <img src="../imagenes/creditcard.png" alt="Crediycard">
-                    <p>Aceptamos pagos con cualquier tarjeta de credito de Visa, MasterCard y Americanexpress.</p>
+                    <p class="pMoneda">Aceptamos pagos con cualquier tarjeta de credito de Visa, MasterCard y Americanexpress.</p>
                 </div>
             </div>
         </section>
@@ -98,7 +100,7 @@
             <li><a href="contactanos.html">Contactanos</a></li>
             <li><a href="#">Sobre nosotros</a></li>
             <li><a href="#">Mision y vision</a></li>
-            <li><a href="#">Asesorias</a></li>
+            <li><a href="#">Disclairmer</a></li>
             <li><a href="../index.html">Inicio</a></li>
         </ul>
         <div class="copy">
