--- a/pages/vender.html
+++ b/pages/vender.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
-    <!--boots-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -34,7 +33,8 @@
                     <div class="offcanvas-header">
                         <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo"
                             class="d-inline-block align-text-top">
-                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
@@ -49,7 +49,7 @@
                                 <a class="nav-link text-light" href="./categorias.html">Categorias</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./vender.html">Vender</a>
+                                <a class="nav-link text-light aVender" href="./vender.html">Vender</a>
                             </li>
                         </ul>
                     </div>
@@ -63,7 +63,7 @@
                 <h2>Vender</h2>
                 <div class="tituloNFT">
                     <input type="text" name="titulo" id="" placeholder="Titulo de tu NFT">
-                    <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" alt="" width="120">
+                    <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" alt="">
                     <input type="file"></input>
                 </div>
                 <div class="descripcionNft">
@@ -99,7 +99,7 @@
         <section class="vistaPrevia" data-aos="zoom-out-left" data-aos-easing="linear" data-aos-duration="600">
             <h2>Vista Previa</h2>
             <div class="card vistaCard">
-                <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" width="300px" alt="NFT ape">
+                <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -109,13 +109,14 @@
                     <a class="botonNft" href="#">Ver más</a>
                 </div>
             </div>
+        </section>
     </main>
     <footer class="pie">
         <ul class="listaFooter">
             <li><a href="contactanos.html">Contactanos</a></li>
             <li><a href="#">Sobre nosotros</a></li>
             <li><a href="#">Mision y vision</a></li>
-            <li><a href="#">Asesorias</a></li>
+            <li><a href="#">Disclairmer</a></li>
             <li><a href="../index.html">Inicio</a></li>
         </ul>
         <div class="copy">
