agregando keywords, description y seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Encuentra y vende los mejores NFT coleccionables, en NFTasty el futuro del arte es hoy.">
+    <meta name="keywords" content="NFT, CRYPTO, BITCOIN, METAMASK">
     <link rel="icon" href="./imagenes/Logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +46,8 @@
                                     href="/index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active text-light " href="./pages/mediosdepago.html">Medios de pago</a>
+                                <a class="nav-link active text-light " href="./pages/mediosdepago.html">Medios de
+                                    pago</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light " href="./pages/categorias.html">Categorias</a>
