--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Encuentra y vende los mejores NFT coleccionables, en NFTasty el futuro del arte es hoy.">
+    <meta name="keywords" content="NFT, CRYPTO, BITCOIN, METAMASK">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
