--- a/pages/vender.html
+++ b/pages/vender.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Encuentra y vende los mejores NFT coleccionables, en NFTasty el futuro del arte es hoy.">
+    <meta name="keywords" content="NFT, CRYPTO, BITCOIN, METAMASK">
     <link rel="icon" href="../imagenes/Logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +16,7 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Vender</title>
+    <title>NFTasty | Vender</title>
 </head>
 
 <body>
