modificaciones en textos y cards

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <section>
             <div class="nftIndex">
                 <div class="indexNftInfo">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo eos rerum perspiciatis. Eum, error
-                        in unde molestias placeat autem voluptatibus eaque dicta suscipit quasi vel dolore repellat.</p>
+                    <p>En NFTasty encontraras y podras vender los NFT del momento, ademas esta es una pagina exclusiva y meramente visual, sin interacion y creada como proyecto hacia CoderHouse! creditos de los NFTs a quienes correspondan.</p>
                 </div>
                 <div class="botonNftIndex">
                     <button class="btnIndex" href="#">Ver más</button>
