--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -84,10 +84,7 @@
             </form>
         </section>
         <section class="descripcionp">
-            <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam veritatis
-                inventore dolores aliquid, cumque, at vitae in aliquam beatae repudiandae officiis accusamus fuga nam?
-                Necessitatibus tempore, inventore nemo ipsum quasi perferendis ad nesciunt dolorum cumque architecto ex
-                in earum veniam.</p>
+            <p class="descripcion">En NFTasty queremos una ayuda mutua, con el fin de ir mejorando y que tu experencia sea satisfactoria, tienes esta opcion de comunicarte con nosotros y contarnos tus consejos, dudas o iquietudes que te surgan, te responderemos en la brevedad.</p>
         </section>
         <section class="iconSocials">
             <div class="socials">
