--- a/pages/vender.html
+++ b/pages/vender.html
@@ -95,9 +95,7 @@
             </form>
         </section>
         <div class="tycVenderp" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tenetur hic odio amet quaerat, maxime
-                sed necessitatibus praesentium. Reprehenderit nam laudantium veniam est porro corporis, repudiandae
-                rerum amet architecto. Voluptates.</p>
+            <p>Recuerda que todos y cada uno de los NFTs que publiques deben ser de tu propiedad, puedes ser originales o reventas, cualquier tipo de irregularidad será sancionada debidamente.</p>
         </div>
         <section class="vistaPrevia" data-aos="zoom-out-left" data-aos-easing="linear" data-aos-duration="600">
             <h2>Vista Previa</h2>
